Add status api
